// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VAlert.vue Render component and match snapshot(s) dismissible - false 1`] = `

<div class="alert"
     style="display: none;"
>
  <div>
  </div>
</div>

`;

exports[`VAlert.vue Render component and match snapshot(s) dismissible - true 1`] = `

<div class="alert alert--dismissible"
     style="display: none;"
>
  <div>
  </div>
  <a class="alert__dismissible"
     href="javascript:;"
  >
    <i class="material-icons icon icon--right">
      cancel
    </i>
  </a>
</div>

`;

exports[`VAlert.vue Render component and match snapshot(s) hideIcon - false 1`] = `

<div class="alert"
     style="display: none;"
>
  <div>
  </div>
</div>

`;

exports[`VAlert.vue Render component and match snapshot(s) hideIcon - true 1`] = `

<div class="alert"
     style="display: none;"
>
  <div>
  </div>
</div>

`;

exports[`VAlert.vue Render component and match snapshot(s) icon - list 1`] = `

<div class="alert"
     style="display: none;"
>
  <i class="material-icons icon alert__icon">
    list
  </i>
  <div>
  </div>
</div>

`;

exports[`VAlert.vue Render component and match snapshot(s) only defaults 1`] = `

<div class="alert"
     style="display: none;"
>
  <div>
  </div>
</div>

`;

exports[`VAlert.vue should be closed by default 1`] = `

<div class="alert"
     style="display: none;"
>
  <div>
  </div>
</div>

`;

exports[`VAlert.vue should emit input:false when close icon is clicked 1`] = `

<div class="alert alert--dismissible">
  <div>
  </div>
  <a class="alert__dismissible"
     href="javascript:;"
  >
    <i class="material-icons icon icon--right">
      cancel
    </i>
  </a>
</div>

`;

exports[`VAlert.vue should have a close icon 1`] = `

<div class="alert alert--dismissible"
     style="display: none;"
>
  <div>
  </div>
  <a class="alert__dismissible"
     href="javascript:;"
  >
    <i class="material-icons icon icon--right">
      cancel
    </i>
  </a>
</div>

`;

exports[`VAlert.vue should have a custom icon 1`] = `

<div class="alert">
  <i class="material-icons icon alert__icon">
    list
  </i>
  <div>
  </div>
</div>

`;

exports[`VAlert.vue should have an alert class 1`] = `

<div class="alert"
     style="display: none;"
>
  <div>
  </div>
</div>

`;

exports[`VAlert.vue should have no icon 1`] = `

<div class="alert success"
     style="display: none;"
>
  <div>
  </div>
</div>

`;

exports[`VAlert.vue should not be visible after being dismissed 1`] = `

<div class="alert alert--dismissible"
     style="display: none;"
>
  <div>
  </div>
  <a class="alert__dismissible"
     href="javascript:;"
  >
    <i class="material-icons icon icon--right">
      cancel
    </i>
  </a>
</div>

`;
